Add BA Network, fix processor.py

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <select id="network-select">
             <option value="network1">Network Science</option>
             <option value="network2">Moreno Crime</option>
+            <option value="ba_network">BA Network</option>
         </select>
         <select id="centrality-select">
             <option value="no-centrality">No Centrality</option>
